--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,6 +23,8 @@
 						<li class="active"><a th:href="@{/}">Home</a></li>
 						<li><a th:href="@{/search}">Search</a></li>
 						<li><a th:href="@{/districts}">District</a></li>
+						<li><a th:href="@{/blocks}">Block</a></li>
+						<li><a th:href="@{/villages}">Village</a></li>
 						<li class="dropdown"><a class="dropdown-toggle"
 							data-toggle="dropdown" href="#">File Upload<span
 								class="caret"></span></a>
